main: add products handler
