# internal/handlers/product.go
@@ -1,0 +1,43 @@
+package handlers
+
+import (
+	"net/http"
+	"pvz-service/internal/models"
+	"pvz-service/internal/repositories"
+	"strings"
+	"time"
+
+	"github.com/labstack/echo/v4"
+	"github.com/sirupsen/logrus"
+)
+
+type ItemHandler struct {
+	repo *repositories.ProductRepository
+}
+
+func NewProductHandler(repo *repositories.ProductRepository) *ItemHandler {
+	return &ItemHandler{repo: repo}
+}
+
+type req struct {
+	Type  string `json:"type"`
+	PvzId string `json:"PvzId"`
+}
+
+func (h *ItemHandler) AddProduct(c echo.Context) error {
+	req := req{}
+	if err := c.Bind(&req); err != nil || req.Type == "" || req.PvzId == "" {
+		return c.JSON(http.StatusBadRequest, echo.Map{"message": "invalid request"})
+	}
+
+	product := models.Product{}
+	product.DateTime = time.Now().Format(time.UnixDate)
+	product.Type = strings.ToLower(req.Type)
+
+	if err := h.repo.AddProduct(c.Request().Context(), product, req.PvzId); err != nil {
+		logrus.Error(err)
+		return c.JSON(http.StatusInternalServerError, echo.Map{"message": "failed to add item"})
+	}
+
+	return c.JSON(http.StatusCreated, echo.Map{"message": "created"})
+}
