# internal/models/product.go
@@ -1,0 +1,8 @@
+package models
+
+type Product struct {
+	ID          string `json:"id"`
+	DateTime    string `json:"dateTime"`
+	Type        string `json:"type"`
+	ReceptionId string `json:"receptionId"`
+}
